Builder library added,several compilation errors fixed

--- a/DesakaDownloader.ParsersLibrary/DesakaDownloader.ParsersLibrary.csproj
+++ b/DesakaDownloader.ParsersLibrary/DesakaDownloader.ParsersLibrary.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <ProjectReference Include="..\DesakaDownloader.Downloader\DesakaDownloader.Downloader.csproj" />
     <ProjectReference Include="..\DesakaDownloader.EntitiesLibrary\DesakaDownloader.EntitiesLibrary.csproj" />
   </ItemGroup>
 
